# swarm-dashboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  structure.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
examples/: basic_usage.py  swarm-config.example.json
src/swarm_dashboard/: __init__.py  __main__.py  agents.py  cli.py  config.py  launcher.py  parser.py  server.py  tracker.py
src/swarm_dashboard/templates/: __init__.py  css.py  html.py  js.py
tests/: __init__.py  conftest.py  test_config.py  test_launcher.py  test_parser.py  test_tracker.py
