[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-dashboard"
version = "6.1.0"
description = "Live real-time dashboard for monitoring AI agent swarms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "HappyCapy", email = "hello@happycapy.ai" }
]
keywords = [
    "ai",
    "agents",
    "swarm",
    "dashboard",
    "monitoring",
    "claude",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0"
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0"
]

[project.scripts]
swarm-dashboard = "swarm_dashboard.cli:main"

[project.urls]
Homepage = "https://github.com/niveshdandyan/swarm-dashboard"
Documentation = "https://github.com/niveshdandyan/swarm-dashboard#readme"
Repository = "https://github.com/niveshdandyan/swarm-dashboard.git"
Issues = "https://github.com/niveshdandyan/swarm-dashboard/issues"
Changelog = "https://github.com/niveshdandyan/swarm-dashboard/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs"
]

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_dashboard"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "C901",   # too complex
    "ARG001", # unused function argument (common in fixtures)
    "SIM108", # use ternary (reduces readability)
    "SIM118", # use key in dict instead of keys()
]

[tool.ruff.lint.isort]
known-first-party = ["swarm_dashboard"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["src/swarm_dashboard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
